# openDaisugi

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  VISION.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  concepts.md  deployment.md  feature-status.md  hook-integration.md  integrations.md  limitations.md  pathway-skill-format.md  pi-vla-integration.md  roadmap.md  robotics.md  security-model.md  step-vocabulary.md  whitepaper.md
docs/adr/: 0000-template.md  0001-fail-closed-default.md  0002-z3-over-heuristics.md  0003-envelope-as-contract.md  0004-layer-not-harness.md  0005-python-runtime.md  0006-claude-p-backend.md  0007-call-time-gate.md  README.md
docs/architecture/: CONVENTIONS.md  OVERVIEW.md
docs/case-studies/: ai-council.md
docs/how-to/: gate.md
docs/spec/: yellow-paper.md
docs/tutorials/: protect-your-existing-session.md
examples/: delegation_demo.py
examples/agent-council/: README.md  envelope.py  plan.py  run_dogfood.py  run_output.json  step_types.py
examples/council-kit/: case_study.md  council_member.envelope.yaml  post_council.envelope.yaml  pre_council.envelope.yaml  test_council_pii_rejection.py
examples/dish-wash/: README.md  envelope.py  mujoco_executor.py  plan.py  run_dogfood.py  run_output.json  step_types.py
examples/gallery/: README.md  harness.py  make_gallery.py  scenarios.py
examples/injection-denied/: TRANSCRIPT.md  run_demo.py
examples/integrations/mujoco/: README.md  smoke.py
examples/integrations/openclaw/: README.md  client.mjs  demo_scenario.mjs  package.json
examples/orchestrator/: run_demo.py
examples/pi-vla/: README.md  envelope.py  plan.py  run_dogfood.py  run_output.json
examples/property-patrol/: README.md  mujoco_render.py  run_demo.py
examples/safe-local-subagent/: run_demo.py
examples/swarm-comms-delegation/: README.md  mujoco_render.py  run_demo.py
examples/swarm-tasking/: README.md  run_demo.py
skills/opendaisugi-checklist/: SKILL.md  references
src/opendaisugi/: __init__.py  _invariant_types.py  _search.py  _similarity.py  accounting.py  adversarial.py  agentic_executor.py  aliases.py  approval.py  benchmark.py  budget.py  claude_code_llm.py  cli.py  config.py  contracts.py  dag.py  decomposer.py  defaults.py  delegating_executor.py  distiller.py  envelope.py  envelope_cache.py  exceptions.py  executor.py  executor_mujoco.py  fallback.py  gate.py  git_pathway_store.py  hardware.py  hook.py  ingest.py  inheritance.py  install.py  interpreter_parse.py  journal.py  llm.py  llm_check.py  local_setup.py  mcp_server.py  model_registry.py  (+32 more)
src/opendaisugi/gardener/: __init__.py  ab_test.py  merger.py  outcomes.py  pruner.py  regression.py  report.py
src/opendaisugi/install_assets/openclaw_plugin/: index.mjs  openclaw.plugin.json  package.json
src/opendaisugi/integrations/: __init__.py  hermes.py
src/opendaisugi/lora/: __init__.py  dataset.py  train.py
src/opendaisugi/parsers/: __init__.py  claude_code.py
src/opendaisugi/skills/opendaisugi-checklist/: SKILL.md
src/opendaisugi/skills/opendaisugi-checklist/references/: authoring-a-dsl.md  contract-orchestration.md  delegation.md  git-registry.md  mcp-usage.md  passive-capture.md  postconditions.md  vla-integration.md  worked-example-council.md
tests/: conftest.py  test_accounting.py  test_adversarial.py  test_agentic_executor.py  test_agentic_live.py  test_agentic_step.py  test_aliases.py  test_aliases_dict_vacuity.py  test_approval.py  test_benchmark.py  test_budget.py  test_calibration.py  test_claude_code_integration.py  test_claude_code_llm.py  test_claude_code_neutral_cwd.py  test_cli.py  test_cli_gardener.py  test_cli_gardener_watch.py  test_cli_gate.py  test_cli_install_help.py  test_cli_llm_flag.py  test_cli_lora.py  test_cli_models.py  test_cli_onboard.py  test_cli_orchestrate.py  test_cli_quickstart.py  test_cli_registry_security.py  test_cli_route.py  test_cli_run.py  test_cli_setup.py  test_cli_tend.py  test_config.py  test_conftest.py  test_contracts.py  test_contracts_strict.py  test_dag.py  test_daisugi.py  test_daisugi_data_dir_coercion.py  test_daisugi_facade_aliases.py  test_daisugi_low_stakes_config.py  (+160 more)
tests/fixtures/: agent.envelope.yaml  calibration_tasks.yaml  household_aliases.yaml  sample_transcript.jsonl  sample_transcript_modern.jsonl
tests/fixtures/mjcf/: contact_at_rest.xml  two_joint_arm.xml
